# kv-storage-contract

./: .gitignore  .gitpod.Dockerfile  Cargo.toml  Makefile  README.md  rust-toolchain
.github/workflows/: ci-kv-storage-contract.yml
contract/: Cargo.toml
contract/src/: lib.rs  main.rs
contracts/kv-storage/: Cargo.toml
contracts/kv-storage/src/: lib.rs
kv_client/: cli.py  kv_storage_client.py
kv_client/commands/: deploy_kv_storage_contract.py  insert_publickey.py  insert_string.py  insert_u512.py  insert_u64.py  read_key.py
scripts/: get.sh  put.sh
tests/: Cargo.toml  build.rs
tests/src/: kv_storage.rs  lib.rs
