[package]
name = "contract"
version = "0.1.1"
authors = ["karandh <karan@casperlabs.io>", "Maciej Zieliński <maciej@casperlabs.io>"]
edition = "2018"

[dependencies]
contract = { package = "casper-contract", version="3.0" }
types = { package = "casper-types", version="3.0" }
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }

[[bin]]
name = "contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[features]
std = ["contract/std"]

#default = ["contract/std", "types/std"]
