[package]
name = "contract"
version = "0.1.1"
authors = ["karandh <karan@casperlabs.io>", "Maciej Zieliński <maciej@casperlabs.io>"]
edition = "2018"

[dependencies]
contract = { package = "casper-contract", version="3.0.0", default-features = false, features = [
  "test-support",
  "no-std-helpers"
]}
types = { package = "casper-types", version="3.0.0", default-features = false}

[[bin]]
name = "contract"
path = "src/main.rs"
bench = false
doctest = false
test = false