[package]
name = "tests"
version = "0.1.0"
authors = ["karandh <karan@casperlabs.io>", "Maciej Zieliński <maciej@casperlabs.io>"]
edition = "2018"

[dev-dependencies]
casperlabs-contract = { git = "https://github.com/CasperLabs/CasperLabs", branch = "hackathon" }
casperlabs-types = { git = "https://github.com/CasperLabs/CasperLabs", branch = "hackathon" }
casperlabs-engine-test-support = { git = "https://github.com/CasperLabs/CasperLabs", branch = "hackathon" }

[features]
default = [
    "casperlabs-contract/std",
    "casperlabs-types/std",
    "casperlabs-engine-test-support/test-support",
    "casperlabs-contract/test-support"
]
