[package]
name = "tests"
version = "0.1.0"
authors = ["karandh <karan@casperlabs.io>","Maciej Zieliński <maciej@casperlabs.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casperlabs-contract = "0.6.1" 
casperlabs-types = "0.6.1"
casperlabs-engine-test-support = "0.8.1"

[features]
default = ["casperlabs-contract/std", "casperlabs-types/std","casperlabs-contract/test-support"]
