[package]
name = "tests"
version = "0.1.0"
authors = ["karandh <karan@casperlabs.io>","Maciej Zieliński <maciej@casperlabs.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "0.7.0" 
casper-types = "0.7.0"
casper-engine-test-support = "0.7.0"

[features]
default = ["casper-contract/std", "casper-types/std","casper-contract/test-support"]
